--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.23.0",
     "@clerk/nextjs": "^6.12.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.19.2",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
