--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.23.0",
     "@clerk/nextjs": "^6.12.0",
+    "@langchain/anthropic": "^0.3.15",
+    "@langchain/core": "^0.3.42",
+    "@langchain/langgraph": "^0.2.55",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.2",
     "framer-motion": "^12.4.7",
+    "langchain": "^0.3.19",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
