--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.3.42",
     "@langchain/langgraph": "^0.2.55",
     "@radix-ui/react-slot": "^1.1.2",
+    "@wxflows/sdk": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.2",
