--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/anthropic": "^0.3.15",
     "@langchain/core": "^0.3.42",
     "@langchain/langgraph": "^0.2.55",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@wxflows/sdk": "^2.0.0",
     "class-variance-authority": "^0.7.1",
