--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "convex": "^1.19.2",
     "framer-motion": "^12.4.7",
     "langchain": "^0.3.19",
-    "lucide-react": "^0.476.0",
+    "lucide-react": "^0.483.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,13 +31,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5"
   }
 }
