--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.3.42",
     "@langchain/langgraph": "^0.2.55",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@wxflows/sdk": "^2.0.0",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +25,7 @@
     "langchain": "^0.3.19",
     "lucide-react": "^0.483.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
