--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.26.1",
     "@clerk/nextjs": "^6.14.1",
-    "@langchain/anthropic": "^0.3.17",
     "@langchain/core": "^0.3.44",
     "@langchain/langgraph": "^0.2.63",
+    "@langchain/openai": "^0.5.5",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
